k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typing-game-ingress
  namespace: typing-game
  labels:
    app: typing-game-backend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: subnet-08891f13d2bc3a3d1,subnet-0b63f6c1258151426
    alb.ingress.kubernetes.io/security-groups: sg-05654e995732e3493
spec:
  rules:
    - http:
        paths:
          - path: /players
            pathType: Prefix
            backend:
              service:
                name: typing-game-backend
                port:
                  number: 80
          - path: /games
            pathType: Prefix
            backend:
              service:
                name: typing-game-backend
                port:
                  number: 80
          - path: /leaderboard
            pathType: Prefix
            backend:
              service:
                name: typing-game-backend
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: typing-game-backend
                port:
                  number: 80
